<resources>
    <string name="app_name">Tasky</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="task_create">Create a task</string>
    <string name="task_name">Task Name</string>
    <string name="task_duration">Task Duration</string>
    <string name="task_points_earned">Points Earned</string>

    <string name="timer_default">00:00:00</string>

    <string name="level">Level</string>
    <string name="congratulations">Congratulations!</string>
    <string name="oh_yeah">Oh yeah!</string>
    <string name="earned_points">You\'ve earned</string>
    <string name="points">XP points!</string>
    <string name="level_up">You\'ve advanced to level</string>
    <string name="item_added">An item has been added to your room!</string>

    <!-- Values for SharedPreferences -->
    <integer name="saved_level_default">1</integer>
    <string name="saved_level">1</string>
    <integer name="points_earned_default">0</integer>
    <string name="points_earned">0</string>
    <integer name="default_level_points_threshold">100</integer>
    <string name="level_points_threshold">100</string>
    <integer name="default_points_earned_level">0</integer>
    <string name="points_earned_level">0</string>

    <string name="title_activity_settings">Settings</string>
    <string name="help">Help</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Settings for History -->
    <string name="pref_header_history">History</string>
</resources>
