<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level_up_oh_yeah"
        android:text="@string/oh_yeah"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/level_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_up"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level_up_item_added"
        android:text="@string/item_added"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/award_image"
        app:srcCompat="@drawable/bowling_ball"
        android:layout_width="150dp"
        android:layout_height="170dp" />
</LinearLayout>